<resources>
    <string name="app_name">Incident Report</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="error_incorrect_credentials">Credenciais inválidas</string>
    <string name="action_sign_up">Cadastrar</string>
    <string name="prompt_confirm_password">Confirme a senha</string>
    <string name="action_send">Cadastrar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="error_confirm_password">As senhas devem ser iguais</string>

    <string name="home">Início</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_incidents">Incidentes</string>
    <string name="title_home">Estatísticas</string>
    <string name="title_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_logout">sair do app</string>
    <string name="button_exit">Sair do Aplicativo</string>
    <string name="login">Entrar</string>
    <string name="sign_up">Não possui conta? Cadastrar</string>
    <string name="name">Nome</string>
    <string name="incidents_number">Foram reportados %d incidentes</string>
    <string name="reportar_incidente">Reportar Incidente</string>
    <string name="cadastrar_incidente">Cadastrar incidente</string>
    <string name="salvar_alteracoes">Salvar Alterações</string>
    <string name="description">Descrição</string>
    <string name="data_da_ocorr_ncia">Data da ocorrência</string>
    <string name="date">%s/%s/%s</string>
    <string name="type">Tipo de incidente</string>
    <string name="oap">OAP</string>
    <string name="oap_permission">Usuário com permissões de OAP</string>
    <string name="title_location_permission">Habilitar localização</string>
    <string name="text_location_permission">Para utilizar o recurso é necessário habilitar a localização.</string>
    <string name="give_permission">Ok</string>
    <string name="ok">Ok</string>
    <string name="withoutLocation">Tente novamente com a permissão de localização aceita.</string>
    <string name="address" />
    <string name="save">Salvar</string>
</resources>
