<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".home.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="32dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:onClick="changeProfilePicture"/>

        <EditText
            android:id="@+id/username"
            android:layout_below="@+id/profile_picture"
            android:hint="@string/name"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email"
            android:layout_marginTop="8dp"
            android:layout_below="@id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvOap"
            android:text="@string/oap_permission"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:layout_below="@id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/apply"
            android:layout_above="@id/llLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="32dp"
            android:text="@string/salvar_alteracoes"/>

        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="start|center"
            android:clickable="true"
            android:orientation="horizontal"
            android:focusable="true"
            android:onClick="logout">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:src="@drawable/ic_exit_to_app_black_24dp"
                android:tint="@color/darkGrey"
                android:contentDescription="@string/description_logout" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/button_exit"
                android:layout_marginLeft="8dp" />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>