<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IncidentActivity">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:elevation="3dp">
        <LinearLayout
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="false"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:onClick="close"
            >
            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_close_black_24dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:text="@string/cadastrar_incidente"
            android:textSize="18sp"/>

        <LinearLayout
            android:id="@+id/ll_save"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="false"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:onClick="save"
            >
            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:tint="@color/colorPrimaryDark"
                android:src="@drawable/ic_check_black_24dp"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">
        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/camera"
            android:clickable="true"
            android:focusable="true"
            />
        <EditText
            android:id="@+id/incident_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text" />
        <EditText
            android:id="@+id/incident_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_da_ocorr_ncia"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                />
            <Button
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="Escolher data"/>
        </LinearLayout>


        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />


        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonColored"
            android:layout_marginTop="8dp"
            android:onClick="save"
            android:text="@string/save"/>

    </LinearLayout>


</LinearLayout>