<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".auth.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"/>


            <!--<ImageView-->
                <!--android:id="@+id/imageView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_marginBottom="@dimen/activity_horizontal_margin"-->
                <!--app:srcCompat="@drawable/logo"-->
                <!--android:contentDescription="@string/app_name" />-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_radius_primary_dark"
                android:padding="@dimen/activity_horizontal_margin"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:elevation="4dp"
                tools:targetApi="lollipop"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:background="@drawable/border_radius_white">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tiEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:nextFocusRight="@id/password"
                            android:nextFocusDown="@id/password"
                            android:nextFocusUp="@id/password"/>

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/tiPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tiEmail">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:autofillHints="*******"
                            tools:targetApi="o" />

                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/email_sign_in_button"
                        android:layout_below="@+id/tiPassword"
                        style="@style/ButtonColored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold"
                        android:onClick="attemptLogin" />

                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/llLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="start|center"
                android:clickable="true"
                android:orientation="horizontal"
                android:focusable="true"
                android:onClick="startRegisterActivity">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/sign_up"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>